--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdk 34
     defaultConfig {
         applicationId "com.qtt.thebarber"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -36,10 +36,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-messaging:17.3.4'
-    implementation 'com.google.firebase:firebase-auth:20.0.3'
-    implementation 'com.google.firebase:firebase-storage:19.2.1'
-    testImplementation 'junit:junit:4.13-beta-3'
+    implementation 'com.google.firebase:firebase-messaging:24.1.0'
+    implementation 'com.google.firebase:firebase-auth:23.1.0'
+    implementation 'com.google.firebase:firebase-storage:21.0.1'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
@@ -47,7 +47,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    implementation 'com.google.firebase:firebase-firestore:21.0.0'
+    implementation 'com.google.firebase:firebase-firestore:25.1.1'
 //    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'com.firebaseui:firebase-ui-auth:7.1.1'
