--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     //Lib
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth:21.3.0'
     implementation 'com.google.firebase:firebase-firestore:25.1.1'
 //    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
@@ -59,11 +59,10 @@ dependencies {
 //    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
     implementation 'com.karumi:dexter:5.0.0'
 //    implementation 'io.paperdb:paperdb:2.6'
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
-    implementation 'com.google.android.material:material:1.0.0-alpha1'
-    implementation 'androidx.room:room-runtime:2.2.1'
-    annotationProcessor  'androidx.room:room-compiler:2.2.1'
-    implementation 'androidx.room:room-rxjava2:2.2.1'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.room:room-runtime:2.6.1'
+    annotationProcessor  'androidx.room:room-compiler:2.6.1'
+    implementation 'androidx.room:room-rxjava2:2.6.1'
     implementation 'com.nex3z:notification-badge:1.0.2'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'org.greenrobot:eventbus:3.2.0'
@@ -71,7 +70,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
 }
