--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:24.1.0'
     implementation 'com.google.firebase:firebase-auth:23.1.0'
     implementation 'com.google.firebase:firebase-storage:21.0.1'
+    implementation 'androidx.activity:activity:1.9.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -50,7 +51,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:25.1.1'
 //    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
-    implementation 'com.firebaseui:firebase-ui-auth:7.1.1'
 //    implementation 'com.github.d-max:spots-dialog:1.1@aar'
 //    implementation 'com.ss.bannerslider:bannerslider:2.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
