--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -8,13 +15,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.qtt.thebarber.UpdateProfileActivity"/>
-        <activity android:name="com.qtt.thebarber.NotificationActivity" />
-        <activity android:name="com.qtt.thebarber.HistoryActivity" />
-        <activity android:name="com.qtt.thebarber.CartActivity" />
-        <activity android:name="com.qtt.thebarber.BookingActivity" />
-        <activity android:name="com.qtt.thebarber.HomeActivity" />
-        <activity android:name="com.qtt.thebarber.MainActivity"
+        <activity
+            android:name=".LoginWithPhoneNumberActivity"
+            android:exported="false" />
+        <activity android:name=".UpdateProfileActivity" />
+        <activity android:name=".NotificationActivity" />
+        <activity android:name=".HistoryActivity" />
+        <activity android:name=".CartActivity" />
+        <activity android:name=".BookingActivity" />
+        <activity android:name=".HomeActivity" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,19 +34,13 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.qtt.thebarber.Service.MyFCMService"
+        <service
+            android:name=".Service.MyFCMService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
-    <uses-permission android:name="android.permission.READ_CALENDAR" />
-    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
 
 </manifest>
